  .cmti files
  (Alain Frisch, report by Daniel Bunzli, review by Jeremie Dimino)
- GPR#915: fix -dsource (pprintast.ml) bugs
  (Runhang Li, review by Alain Frisch)

- GPR#832, MPR#7357: Improve compilation time for toplevel
  include(struct ... end : sig ... end)
  (Alain Frisch, report by Hongbo Zhang, review by Jacques Garrigue)

### Bug fixes

- PR#7216, GPR#949: don't require double parens in Functor((val x))
  (Jacques Garrigue, review by Valentin Gatien-Baron)

- PR#7414, GPR#929: Soundness bug with non-generalized type variable and functor
  (Jacques Garrigue, report by Leo White)

- PR#7421: Soundness bug with GADTs and lazy
  (Jacques Garrigue, report by Leo White)

- PR#7424: Typechecker diverges on unboxed type declaration
  (Jacques Garrigue, report by Stephen Dolan)

- PR#7432: Linking modules compiled with -labels and -nolabels is not safe
  (Jacques Garrigue, report by Jeremy Yallop)

- PR#7437: typing assert failure with nonrec priv
  (Jacques Garrigue, report by Anil Madhavapeddy)

- GPR#795: remove 256-character limitation on Sys.executable_name
  (Xavier Leroy)

- GPR#814: fix the Buffer.add_substring bounds check to handle overflow
  (Jeremy Yallop)

- GPR#810: check for integer overflow in Array.concat
  (Jeremy Yallop)

- GPR#805, GPR#815, GPR#833: check for integer overflow in String.concat
  (Jeremy Yallop,
   review by Damien Doligez, Alain Frisch, Daniel Bünzli, Fabrice Le Fessant)

- GPR#934: check for integer overflow in Bytes.extend
  (Jeremy Yallop, review by Gabriel Scherer)

- MPR#6594, GPR#955: Remove "Istore_symbol" specific operation on x86-64.
  This is more robust and in particular avoids assembly failures on Win64.
  (Mark Shinwell, review by Xavier Leroy, testing by David Allsopp and
   Olivier Andrieu)

- GPR#956 Keep possibly-effectful expressions when optimizing multiplication
  by zero.
  (Jeremy Yallop)

- PR#7427, GPR#959: Don't delete let bodies in Cmmgen (Mark Shinwell)
